--- a/AndroidClient/app/src/main/AndroidManifest.xml
+++ b/AndroidClient/app/src/main/AndroidManifest.xml
@@ -23,6 +23,14 @@
         </activity>
         <activity android:name=".activities.TestEmojiActivity" />
         <activity android:name=".activities.ChartsActivity" />
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:label="@string/title_activity_login"
+            android:parentActivityName=".MainActivity">
+                <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="itmo.notes.MainActivity"/>
+        </activity>
     </application>
 
 </manifest>
