--- a/AndroidClient/app/build.gradle
+++ b/AndroidClient/app/build.gradle
@@ -133,4 +133,6 @@ dependencies {
 
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'com.google.android.material:material:1.3.0-alpha01'
 }
