--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,6 +17,9 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Make gradlew executable
+      working-directory: AndroidClient
+      run: chmod +x ./gradlew
     - name: Build with Gradle
       working-directory: AndroidClient
       run: ./gradlew build
